--- a/notes.html
+++ b/notes.html
@@ -942,133 +942,219 @@
 </style>
 
 <script>
+  // 标签筛选功能
+  let activeTags = new Set();
+
   document.addEventListener("DOMContentLoaded", () => {
-    initializeCourseMetadata();
+    // 为每个标签添加类型属性
+    document.querySelectorAll(".pill").forEach((pill) => {
+      const text = pill.textContent.trim();
+      const typeMap = {
+        Graduate: "Graduate",
+        Undergraduate: "Undergraduate",
+        Core: "Core",
+        Elective: "Elective",
+        GRE: "GRE",
+        Physics: "Physics",
+        Math: "Math",
+        Engineering: "Engineering",
+      };
+
+      pill.dataset.type = typeMap[text] || "Other";
+    });
+
+    // 初始化课程卡片元数据
+    initCourseMetadata();
+
+    // 生成筛选标签
     generateFilterTags();
+
+    // 初始化原有标签系统
     initLegacyTagSystem();
-    setupSearch();
+
+    // 添加调试日志
+    console.log(
+      "Initialized courses:",
+      document.querySelectorAll(".course-card").length
+    );
+    console.log(
+      "Generated filters:",
+      document.querySelectorAll(".tag-pill").length
+    );
   });
 
-  const activeFilters = new ActiveFilters();
-  const searchInput = document.getElementById("noteSearch");
-  const searchStatus = document.getElementById("searchStatus");
+  function toggleTagFilter(tag) {
+    const pill = event.target;
+    pill.classList.toggle("active");
 
-  // 课程元数据初始化
-  function initializeCourseMetadata() {
+    if (activeTags.has(tag)) {
+      activeTags.delete(tag);
+    } else {
+      activeTags.add(tag);
+    }
+    filterNotes();
+  }
+
+  function filterNotes() {
+    // 1. 筛选课程卡片
     document.querySelectorAll(".course-card").forEach((card) => {
-      const section = card.closest("section");
-      if (section)
-        card.dataset.university = section.dataset.university || "Others";
+      card.style.display = activeFilters.checkCourse(card) ? "block" : "none";
+    });
 
+    // 2. 处理大学标题的显示
+    document.querySelectorAll("section[id]").forEach((section) => {
+      const university = section.dataset.university;
+      const hasVisibleCards = Array.from(
+        section.querySelectorAll(".course-card")
+      ).some((card) => card.style.display !== "none");
+
+      // 3. 根据可见性切换标题显示
+      const title = section.querySelector("h3.custom-title");
+      if (title) {
+        if (hasVisibleCards) {
+          title.closest("header").style.display = "block";
+          section.style.display = "block";
+        } else {
+          title.closest("header").style.display = "none";
+          section.style.display = "none";
+        }
+      }
+    });
+
+    // 同步更新搜索状态显示
+    updateSearchStatus();
+  }
+
+  // 调整原有滚动功能
+  document.querySelectorAll(".scrolly").forEach((anchor) => {
+    anchor.addEventListener("click", function (e) {
+      e.preventDefault();
+      const target = document.querySelector(this.getAttribute("href"));
+      target.scrollIntoView({ behavior: "smooth" });
+
+      // 移除所有学校导航的active状态
+      document.querySelectorAll(".school-nav h4 a").forEach((link) => {
+        link.classList.remove("active");
+      });
+
+      // 为当前点击的学校添加active状态
+      this.classList.add("active");
+    });
+  });
+
+  function initCourseMetadata() {
+    // 更可靠的数据属性设置
+    document.querySelectorAll(".course-card").forEach((card) => {
+      // 大学信息
+      const section = card.closest("section");
+      if (section) {
+        const universityMap = {
+          imperial: "Imperial",
+          hust: "HUST",
+          pku: "PKU",
+          others: "Others",
+        };
+        card.dataset.university = universityMap[section.id] || "Others";
+      }
+
+      // 年份信息
       const yearMatch = card
         .querySelector("h4")
         ?.textContent.match(/(Fall|Spring) (\d{4})/);
-      if (yearMatch) card.dataset.year = yearMatch[2];
+      if (yearMatch) {
+        card.dataset.year = yearMatch[2]; // 提取4位年份
+      }
 
-      card.querySelectorAll(".pill").forEach((pill) => {
+      // 级别和学科
+      const pills = card.querySelectorAll(".pill");
+      pills.forEach((pill) => {
         const type = pill.dataset.type;
-        if (["Graduate", "Undergraduate"].includes(type))
+        if (["Graduate", "Undergraduate"].includes(type)) {
           card.dataset.level = type;
-        else if (["Physics", "Math", "Engineering", "GRE"].includes(type))
+        } else if (["Physics", "Math", "Engineering", "GRE"].includes(type)) {
           card.dataset.subject = type;
+        }
       });
     });
   }
 
-  // 生成筛选标签
   function generateFilterTags() {
-    ["university", "year", "level", "subject"].forEach((filter) => {
-      const container = document.querySelector(`[data-filter="${filter}"]`);
-      if (!container) return;
-
+    // 生成各维度标签
+    const dimensions = ["university", "level", "subject"];
+    dimensions.forEach((dim) => {
+      const container = document.querySelector(`[data-filter="${dim}"]`);
       const values = new Set();
-      document.querySelectorAll(".course-card").forEach((card) => {
-        if (card.dataset[filter]) values.add(card.dataset[filter]);
+
+      document.querySelectorAll(`.course-card`).forEach((card) => {
+        if (card.dataset[dim]) values.add(card.dataset[dim]);
       });
 
-      [...values]
-        .sort()
-        .reverse()
-        .forEach((value) => {
-          const pill = createFilterPill(value, filter);
-          container.appendChild(pill);
-        });
+      values.forEach((value) => {
+        const pill = document.createElement("div");
+        pill.className = "tag-pill";
+        pill.textContent = value;
+        pill.dataset.filter = dim;
+        pill.dataset.value = value;
+        pill.addEventListener("click", toggleDimensionFilter);
+        container.appendChild(pill);
+      });
+    });
+
+    // 生成年份标签（倒序排列）
+    const years = new Set();
+    document.querySelectorAll("[data-year]").forEach((card) => {
+      if (card.dataset.year) years.add(card.dataset.year);
+    });
+
+    // 转换为数组并排序
+    const sortedYears = Array.from(years)
+      .filter((y) => y.match(/^20\d{2}$/)) // 过滤有效年份
+      .map((y) => parseInt(y)) // 转为数字
+      .sort((a, b) => b - a) // 降序排列
+      .map((y) => y.toString()); // 转回字符串
+
+    populateFilterTags("year", sortedYears);
+  }
+
+  function populateFilterTags(filterType, values) {
+    const container = document.querySelector(`[data-filter="${filterType}"]`);
+    container.innerHTML = "";
+
+    // 处理数组和Set的统一输入
+    const valueList = Array.isArray(values) ? values : Array.from(values);
+
+    valueList.forEach((value) => {
+      if (!value) return;
+      const pill = document.createElement("div");
+      pill.className = "tag-pill";
+      pill.textContent = value;
+      pill.dataset.filter = filterType;
+      pill.dataset.value = value;
+      pill.addEventListener("click", toggleDimensionFilter);
+      container.appendChild(pill);
     });
   }
 
-  // 创建筛选标签
-  function createFilterPill(value, filter) {
-    const pill = document.createElement("div");
-    pill.className = "tag-pill";
-    pill.textContent = value;
-    pill.dataset.filter = filter;
-    pill.dataset.value = value;
-    pill.addEventListener("click", toggleFilter);
-    return pill;
-  }
-
-  // 切换筛选项
-  function toggleFilter(event) {
+  function toggleDimensionFilter(event) {
     const pill = event.target;
     const filter = pill.dataset.filter;
     const value = pill.dataset.value;
 
+    // 切换激活状态
     pill.classList.toggle("active");
-    pill.classList.contains("active")
-      ? activeFilters.add(filter, value)
-      : activeFilters.remove(filter, value);
-    applyFilters();
+    const isActive = pill.classList.contains("active");
+
+    // 更新筛选器状态
+    if (isActive) {
+      activeFilters.addFilter(filter, value);
+    } else {
+      activeFilters.removeFilter(filter, value);
+    }
+
+    // 执行筛选
+    filterNotes();
   }
 
-  // 过滤课程
-  function applyFilters() {
-    document.querySelectorAll(".course-card").forEach((card) => {
-      card.style.display = activeFilters.matches(card) ? "block" : "none";
-    });
-
-    document.querySelectorAll("section[id]").forEach((section) => {
-      section.style.display = [
-        ...section.querySelectorAll(".course-card"),
-      ].some((card) => card.style.display !== "none")
-        ? "block"
-        : "none";
-    });
-
-    updateSearchStatus();
-  }
-
-  // 处理旧标签系统
-  function initLegacyTagSystem() {
-    document.querySelectorAll("#tagContainer .tag-pill").forEach((pill) => {
-      pill.addEventListener("click", () => {
-        pill.classList.toggle("active");
-        pill.classList.contains("active")
-          ? activeFilters.add("legacy", pill.textContent)
-          : activeFilters.remove("legacy", pill.textContent);
-        applyFilters();
-      });
-    });
-  }
-
-  // 设置搜索功能
-  function setupSearch() {
-    searchInput.addEventListener("input", () => {
-      applyFilters();
-    });
-  }
-
-  // 更新搜索状态
-  function updateSearchStatus() {
-    const activeTags = [
-      ...activeFilters.getActiveTags(),
-      searchInput.value.trim(),
-    ].filter(Boolean);
-    searchStatus.textContent = activeTags.length
-      ? `Showing results for: ${activeTags.join(", ")}`
-      : "";
-  }
-
-  // 筛选器管理类
   class ActiveFilters {
     constructor() {
       this.filters = {
@@ -1080,27 +1166,69 @@
       };
     }
 
-    add(filter, value) {
-      this.filters[filter].add(value);
-    }
-    remove(filter, value) {
-      this.filters[filter].delete(value);
+    addFilter(dim, value) {
+      this.filters[dim].add(value);
     }
 
-    matches(card) {
-      return Object.entries(this.filters).every(([filter, values]) => {
-        if (!values.size) return true;
-        return filter === "year"
-          ? values.has(card.dataset.year)
-          : values.has(card.dataset[filter]);
+    removeFilter(dim, value) {
+      this.filters[dim].delete(value);
+    }
+
+    checkCourse(card) {
+      return Object.entries(this.filters).every(([dim, values]) => {
+        if (values.size === 0) return true;
+
+        const cardValue = card.dataset[dim];
+
+        // 特殊处理年份筛选
+        if (dim === "year") {
+          return Array.from(values).some((y) => card.dataset.year === y);
+        }
+
+        // 常规维度筛选
+        return values.has(cardValue);
       });
     }
+  }
 
-    getActiveTags() {
-      return Object.values(this.filters).reduce(
-        (acc, set) => acc.concat([...set]),
-        []
-      );
-    }
+  const activeFilters = new ActiveFilters();
+
+  function initLegacyTagSystem() {
+    // 原有标签系统整合
+    document.querySelectorAll("#tagContainer .tag-pill").forEach((pill) => {
+      pill.addEventListener("click", function () {
+        const tag = this.textContent;
+        this.classList.toggle("active");
+
+        if (this.classList.contains("active")) {
+          activeFilters.addFilter("legacy", tag);
+        } else {
+          activeFilters.removeFilter("legacy", tag);
+        }
+
+        filterNotes();
+      });
+    });
+  }
+
+  // 与现有搜索功能的整合
+  const originalSearch = document.getElementById("noteSearch");
+
+  // 监听原有搜索输入
+  originalSearch.addEventListener("input", () => {
+    filterNotes();
+    updateSearchStatus();
+  });
+
+  function updateSearchStatus() {
+    const searchStatus = document.getElementById("searchStatus");
+    const activeFilters = [
+      ...Array.from(activeTags),
+      originalSearch.value.trim(),
+    ].filter(Boolean);
+
+    searchStatus.textContent = activeFilters.length
+      ? `Showing results for: ${activeFilters.join(", ")}`
+      : "";
   }
 </script>
