--- a/notes.html
+++ b/notes.html
@@ -108,6 +108,13 @@
                   <!-- 动态生成学科标签 -->
                 </div>
               </section>
+
+              <section class="tag-cloud">
+                <h4>Language</h4>
+                <div class="tag-container" data-filter="language">
+                  <!-- 动态生成学科标签 -->
+                </div>
+              </section>
             </div>
             <div class="col-9 col-12-mobile imp-mobile" id="content">
               <div class="search-container">
@@ -138,6 +145,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -161,6 +169,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -181,6 +190,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Math</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -207,6 +217,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -228,6 +239,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -249,6 +261,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -296,6 +309,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Math</span>
+                        <span class="pill">CN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -334,6 +348,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -361,6 +376,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">CN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -385,6 +401,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">CN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -434,6 +451,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Engineering</span>
+                        <span class="pill">CN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -475,6 +493,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">CN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -511,6 +530,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">CN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -532,6 +552,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
+                        <span class="pill">CN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -553,6 +574,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Engineering</span>
+                        <span class="pill">CN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -600,6 +622,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -630,6 +653,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">CN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -651,6 +675,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
+                        <span class="pill">CN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -679,6 +704,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">CN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -706,6 +732,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">CN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -777,6 +804,7 @@
                       <div class="course-meta">
                         <span class="pill">GRE</span>
                         <span class="pill">Physics</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -1073,6 +1101,8 @@
           card.dataset.level = type;
         } else if (["Physics", "Math", "Engineering", "GRE"].includes(type)) {
           card.dataset.subject = type;
+        } else if (["EN", "CN"].includes(type)) {
+          card.dataset.language = type;
         }
       });
     });
@@ -1080,7 +1110,7 @@
 
   function generateFilterTags() {
     // 生成各维度标签
-    const dimensions = ["university", "level", "subject"];
+    const dimensions = ["university", "level", "subject", "language"];
     dimensions.forEach((dim) => {
       const container = document.querySelector(`[data-filter="${dim}"]`);
       const values = new Set();
