--- a/notes.html
+++ b/notes.html
@@ -949,12 +949,6 @@
   .pill[data-type="Undergraduate"] {
     background: #9b9bcf; /* 灰调薰衣草紫 */
   }
-  .pill[data-type="Core"] {
-    background: rgb(101, 205, 206); /* 薄荷绿 */
-  }
-  .pill[data-type="Elective"] {
-    background: rgba(232, 197, 107); /* 米白色 */
-  }
   .pill[data-type="Physics"] {
     background: rgb(115, 174, 225); /* 灰调天蓝 */
   }
@@ -966,6 +960,12 @@
   }
   .pill[data-type="GRE"] {
     background: #c4b19d; /* 浅卡其色 */
+  }
+  .pill[data-type="EN"] {
+    background: rgb(101, 205, 206); /* 薄荷绿 */
+  }
+  .pill[data-type="CN"] {
+    background: rgba(232, 197, 107); /* 米白色 */
   }
 </style>
 
