--- a/notes.html
+++ b/notes.html
@@ -1192,6 +1192,7 @@
         year: new Set(),
         level: new Set(),
         subject: new Set(),
+        language: new Set(),
         legacy: new Set(),
       };
     }
