--- a/notes.html
+++ b/notes.html
@@ -145,7 +145,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">en</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -169,7 +169,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">en</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -190,7 +190,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Math</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">en</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -217,7 +217,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">en</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -239,7 +239,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">en</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -261,7 +261,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">en</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -309,7 +309,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Math</span>
-                        <span class="pill">CN</span>
+                        <span class="pill">中文</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -348,7 +348,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">en</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -376,7 +376,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">CN</span>
+                        <span class="pill">中文</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -401,7 +401,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">CN</span>
+                        <span class="pill">中文</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -451,7 +451,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Engineering</span>
-                        <span class="pill">CN</span>
+                        <span class="pill">中文</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -493,7 +493,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">CN</span>
+                        <span class="pill">中文</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -530,7 +530,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">CN</span>
+                        <span class="pill">中文</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -552,7 +552,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
-                        <span class="pill">CN</span>
+                        <span class="pill">中文</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -574,7 +574,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Engineering</span>
-                        <span class="pill">CN</span>
+                        <span class="pill">中文</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -622,7 +622,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">en</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -653,7 +653,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">CN</span>
+                        <span class="pill">中文</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -675,7 +675,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
-                        <span class="pill">CN</span>
+                        <span class="pill">中文</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -704,7 +704,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">CN</span>
+                        <span class="pill">中文</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -732,7 +732,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">CN</span>
+                        <span class="pill">中文</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -804,7 +804,7 @@
                       <div class="course-meta">
                         <span class="pill">GRE</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">EN</span>
+                        <span class="pill">en</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -961,10 +961,10 @@
   .pill[data-type="GRE"] {
     background: #c4b19d; /* 浅卡其色 */
   }
-  .pill[data-type="EN"] {
+  .pill[data-type="en"] {
     background: rgb(101, 205, 206); /* 薄荷绿 */
   }
-  .pill[data-type="CN"] {
+  .pill[data-type="中文"] {
     background: rgba(232, 197, 107); /* 米白色 */
   }
 </style>
@@ -1101,7 +1101,7 @@
           card.dataset.level = type;
         } else if (["Physics", "Math", "Engineering", "GRE"].includes(type)) {
           card.dataset.subject = type;
-        } else if (["EN", "CN"].includes(type)) {
+        } else if (["en", "中文"].includes(type)) {
           card.dataset.language = type;
         }
       });
