--- a/notes.html
+++ b/notes.html
@@ -145,7 +145,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">en</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -169,7 +169,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">en</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -190,7 +190,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Math</span>
-                        <span class="pill">en</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -217,7 +217,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">en</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -239,7 +239,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
-                        <span class="pill">en</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -261,7 +261,7 @@
                       <div class="course-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
-                        <span class="pill">en</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -348,7 +348,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">en</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -622,7 +622,7 @@
                       <div class="course-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">en</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -804,7 +804,7 @@
                       <div class="course-meta">
                         <span class="pill">GRE</span>
                         <span class="pill">Physics</span>
-                        <span class="pill">en</span>
+                        <span class="pill">EN</span>
                       </div>
                     </div>
                     <div class="course-body">
@@ -961,7 +961,7 @@
   .pill[data-type="GRE"] {
     background: #c4b19d; /* 浅卡其色 */
   }
-  .pill[data-type="en"] {
+  .pill[data-type="EN"] {
     background: rgb(101, 205, 206); /* 薄荷绿 */
   }
   .pill[data-type="中文"] {
@@ -1101,7 +1101,7 @@
           card.dataset.level = type;
         } else if (["Physics", "Math", "Engineering", "GRE"].includes(type)) {
           card.dataset.subject = type;
-        } else if (["en", "中文"].includes(type)) {
+        } else if (["EN", "中文"].includes(type)) {
           card.dataset.language = type;
         }
       });
